<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SigApp</string>
    <string name="logo">Logo</string>
    <string name="prenom">Votre prénom</string>
    <string name="nom">Votre nom</string>
    <string name="societe">Votre société</string>
    <string name="baliseNom">Nom de la balise à gerer</string>
    <string name="email">Votre e-mail</string>
    <string name="pass">Votre mot de passe</string>
    <string name="Actualiser">Actualiser</string>
    <string name="balise">Changer de balise</string>
    <string name="quitter">Quitter</string>
    <string name="bienvenue_sur_sigmobile">
        Vous disposez d’un abonnement SIGFOX et vous désirez accéder à vos données quelque soit le lieu ?
        SigApp est faite pour vous !
        Accédez aux données de votre balise SIGFOX depuis votre téléphone ou ordinateur en un simple clique.
        Pour vous authentifier, veuillez remplir les champs suivants : </string>
    <string name="je_souhaite_tre_inform_par_mail">Je souhaite être informé par mail.</string>
    <string name="ok">Ok</string>
    <string name="choisissez_la_balise_g_rer">Choisissez la balise à gérer.</string>
    <string-array name="balises">
        <item>Balise 1</item>
        <item>Balise 2</item>
        <item>Balise 3</item>
    </string-array>
    <string name="title_activity_board">Board</string>
    <string name="test1">test1</string>
    <string name="mdp1"><![CDATA[test&]]></string>
    <string name="societe1">societe1</string>
    <string name="title_activity_messages">Messages</string>
    <string name="bname">Nom balise</string>
    <string name="dname">Trame</string>
    <string name="aname">Action</string>
    <string name="mod">Modifier</string>
    <string name="Suppr">Supprimer</string>
    <string name="_005">005</string>
    <string name="_1">1</string>
    <string name="did">Id de la donnée</string>
    <string name="id1">id1</string>
    <string name="nsociete">Societe</string>

    <string name="title_activity_info">Info</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="inforssi">RSSI : le Received Signal Strength Indication ou RSSI est une mesure de la puissance en réception d\'un signal reçu de l\’antenne  de la balise SIGFOX (classiquement un signal radio). Son utilité est de fournir une indication sur l\'intensité du signal reçu. Ainsi, le signal peut être mesuré en analogique ou en continu, par exemple à partir d\'une échelle 0/5 V (le niveau le plus élevé est 5 V, le plus bas est 0 V).Vous pouvez avoir accès depuis l\’application aux mesures du RSSI prélevé par votre balise. GRAHIQUE RSSI :Le graphique RSSI résume l\’évolution du RSSI prévelé par votre balise durant les X jours/mois précedents.</string>
    <string name="infovoltage">VOLTAGE : La tension électrique est la circulation du champ électrique le long d\'un circuit mesurée en volt par un voltmètre. Elle est souvent notée U, mais aussi parfois V. Une tension inférieure à 5V est nécessaire au bon fonctionnement de la balise. Vous pouvez avoir accès depuis l\’application aux mesures de la tension prélevée par votre balise. Attention : si la tension est supérieure à 5 V il y a un risque de surtension de la balise. GRAPHIQUE VOLTAGE : Le graphique de voltage représente l\’évolution de la tension prélevée par votre balise durant les X jours précédents.</string>
    <string name="logo2">Logo</string>
    <string name="mdp2">testé</string>
    <string name="mdp3">test\"</string>
    <string name="etat_de_la_balise">Le voltage de la balise est trop important. Il faut absolument qu\'un technicien aille sur le terrain pour vérifier l\'état de la balise.</string>
</resources>
