<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cellborder"
                android:paddingBottom="6dp"
                android:paddingLeft="3dp"
                android:paddingTop="6dp"
                android:text="@string/bname"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cellborder"
                android:paddingBottom="6dp"
                android:paddingLeft="3dp"
                android:paddingTop="6dp"
                android:text="@string/dname"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cellborder"
                android:paddingBottom="6dp"
                android:paddingLeft="3dp"
                android:paddingTop="6dp"
                android:text="@string/aname"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/tv_propertylistitem_slno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/valuecellborder"
                android:paddingBottom="6dp"
                android:paddingLeft="3dp"
                android:paddingTop="6dp"
                android:text="@string/_1"
                android:textColor="#ffffff"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_propertylistitem_propertyid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/valuecellborder"
                android:paddingBottom="6dp"
                android:paddingLeft="3dp"
                android:paddingTop="6dp"
                android:text="@string/_005"
                android:textColor="#ffffff"
                android:textSize="12sp" />
            <RelativeLayout
                android:id="@+id/test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="6dp"
                android:paddingLeft="3dp"
                android:paddingTop="6dp"
                android:textColor="#ffffff"
                android:textSize="12sp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/mod"
                    android:layout_gravity="left"
                    android:id="@+id/t1"
                    android:layout_marginTop="@dimen/space" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/Suppr"
                    android:layout_gravity="right"
                    android:id="@+id/t2"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/t1"
                    android:layout_toEndOf="@+id/t1" />
            </RelativeLayout>
            <!-- </LinearLayout> -->
        </TableRow>
    </TableLayout>
</LinearLayout>